--- a/packages/ng-calculator/src/app/calculator/calculator.component.html
+++ b/packages/ng-calculator/src/app/calculator/calculator.component.html
@@ -7,6 +7,7 @@
   (clearResult)="clearResult()"
   (changeRecipe)="changeRecipe($event)"
   (changePredefineCondition)="changePredefineCondition($event)"
+  (changeSelectedYear)="selectedYear = $event"
 ></app-calculator-form>
 
 <div class="row mt-5">
@@ -17,6 +18,7 @@
     [monthlyMetas$]="monthlyMetas$"
     [cityRecipe]="cityRecipe"
     [scroll$]="scroll$"
+    [calculationYear]="selectedYear"
     (updateMeta)="updateMeta($event.meta, $event.index)"
     (changeChartMonth)="changeChartMonth($event)"
   ></app-monthly-results>
